|               * to fix: no errors on adding user (custom HP)    |
\_________________________________________________________________/

2007-10-14 Raphael Geissert
    - ENGINE:
        * Fixed #767: Backup folder under domain-aliases
        * Fixed #768: scripts delayed because of empty entropy pool
        * Removed suggesting main sql user password
    - GUI:
        * Fixed curlang()

2007-10-14 Malte Geierhos
	- GUI:
		* fixed #740 autoresponder for subdomains cannot be activated

2007-10-14 Raphael Geissert
    - GUI:
        * Security Fix: XSS injection in gui/index.php
    - CONFIGS:
        * Enable suexec on all CGI's whether fastcgi is loaded or not
    - SETUP:
        * Remove local nameserver from /etc/resolv.conf
    - LANGUAGES:
        * Updated Czech translation (thanks to Josef Pinc)

2007-10-13 Raphael Geissert
    - ENGINE:
        * Generate database keys at setup time (fix for Debian packaging)
        * Added ispCP config (/etc/ispcp) and database backup system
    - SETUP:
        * LSB compatiblity for installing/removing init scripts
    - CONFIGS:
        * Added BACKUP_DOMAINS yes/no switch to enable/disable customer backups
        * Made ispcp_network and ispcp_daemon more or less LSB compatible
        * Fixed #688: updated ispcp_network in all distros (including fedora)
    - GUI:
        * Fixed #645: improve welcome emails messages
        * Fixed #758: phpMyAdmin Security vulnerability
        * Added different message levels to be used with write_log to reduce verbosity of emails sent
    - MAKEFILE:
        * Fixed some Makefiles which were replacing files in the local copy rather than in the installation

2007-10-13 Benedikt Heintel
	- CONFIGS:
		* Updated php-fcgi-starter for Gentoo und Debian
		* Fixed #763: Patch for all applicable differences between debian and gentoo config files
		* Added CentOS
	- DOCS:
		* Updated Redhat
		* Updated Ubuntu
		* Added CentOS
		* Fixed #761: Ubuntu 7.10 Gutsy package list
	- ENGINE: