@@ -1008,7 +1008,7 @@ sub gen_sys_rand_num {
                 push_el(\@main::el, 'gen_sys_rand_num()', "WARNING: seeding the entropy pool");
 
                 my $seed = $len;
-                while ($seed >= 0) {
+                while ($seed >= 0 || int(get_file('/proc/sys/kernel/random/entropy_avail')) <= $len) {
                     save_file('/dev/urandom', rand());
                     save_file('/dev/urandom', time ^ ($$ + ($$ << 15)));
                     $seed--;
